# kgcl

./: .copier-answers.yml  .cursorrules  .gitignore  .pre-commit-config.yaml  .tool-versions  BUILD_SYSTEM_SUMMARY.md  CHICAGO_TDD_PYTHON_IMPLEMENTATION.md  CLAUDE.md  COMPLETE_UNRDF_PORTING_SUMMARY.md  COMPLETION_SUMMARY.md  GIT_HOOKS_ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_GAP_ANALYSIS.md  KGCL_IMPLEMENTATION_SUMMARY.md  Makefile.toml  PLAYGROUND_COMPLETE.md  README.md  YAWL-TREE.txt  coverage.json  generated_signatures.py  mkdocs.yml  pyproject.toml
.cursor/commands/: 80-20-fill-gaps.md  README.md  acp.md  andon-signals.md  concept-selection.md  dmaic-problem-solving.md  eliminate-muda.md  eliminate-mura.md  expert-testing-patterns.md  fix-lint-errors.md  fmea.md  gemba-walk.md  kaizen-improvement.md  poka-yoke-design.md  release-preparation.md  robust-design.md  root-cause-analysis.md  strict-build-verification.md  triz-problem-solving.md  verify-tests.md  verify-unrdf-porting.md  voice-of-customer-qfd.md
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/workflows/: chicago-tdd-tests.yml  integration-tests.yml  test.yml
.kgc/: apple.ingest.ttl  cli.ttl  context.md  hooks.ttl  invariants.shacl.ttl  manifest.ttl  ontology.ttl  types.ttl
.kgc/projections/: agenda.md.j2  api_openapi.j2  cli.py.j2  diagrams.njk  docs.njk  python_dataclass.j2  typescript_interface.j2
config/: pyobjc_agent.schema.json  pyobjc_agent.yaml
docs/: 80_20_capability_inventory.md  ATMAN_ENGINE.md  BEFORE_AFTER_COMPARISON.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_REFACTOR_NOTES.md  COMPLETENESS_LAW_ROADMAP.md  EXECUTION_TEMPLATES_QUICK_REFERENCE.md  EXECUTION_TEMPLATES_ROADMAP.md  FMEA_UNTYPED_MUD_VALIDATION_REPORT.md  GETTING_STARTED.md  GIT_HOOKS_QUALITY_GATES.md  OVERLAP_RECONCILIATION_REPORT.md  PARAMETER_EVOLUTION_ANALYSIS.md  PHASE_1_COMPLETE.md  SEVEN-AVATARS.md  SPARQL_INJECTION_ARCHITECTURE.md  SPARQL_TEMPLATE_EXAMPLE.md  SPARQL_TEMPLATE_ONTOLOGY_PATCH.ttl  SPARQL_TEMPLATE_SUMMARY.md  SPARQL_TOKEN_ROUTING_ARCHITECTURE.md  TRIZ_DYNAMICS_VALIDATION_REPORT.md  TRIZ_PRINCIPLE_35_VALIDATION_REPORT.md  UNRDF_PORTING_GUIDE.md  YAWL-COMPLETE-PORT-PLAN.md  YAWL-COMPLETE-PORT-PRD.md  YAWL_PATTERN_MAPPING_ANALYSIS.md  architecture.md  authentication_porting_summary.md  cli-reference.md  getting-started.md  hooks_system_README.md  implementation-status.md  index.md  interface-a-migration.md  java-to-python-porting-status.md  java_to_python_porting_plan.md  java_to_python_porting_status.md  kernel_purification_design.py  logging-jtbd-tests-8020-analysis.md  logging-test-gaps-8020-analysis.md  (+17 more)
docs/adr/: 001-mock-interface-a-client.md
docs/analysis/: DFLSS_WCP43_VALIDATION.md  STUB_ANALYSIS.md  thesis_hybrid_workflow_architecture.tex  thesis_monotonic_workflow_impossibility.tex  yawl-ui-java-analysis.md
docs/api/: README.md  atman-engine-openapi.yaml
docs/architecture/: ADR-001-HYBRID-ENGINE-ARCHITECTURE.md  ADR-002-TEMPORAL-N3-EXPLORATION.md  ADR-003-UNIFIED-CODEGEN-ARCHITECTURE.md  AGENT_4_PROJECTOR_IMPLEMENTATION.md  C1_SystemContext.puml  C2_Containers.puml  C3_Components.puml  C4_ClassDiagram.puml  CODEGEN_EXECUTIVE_SUMMARY.md  CODEGEN_QUICK_START.md  GIT_HOOKS_ADAPTATION_PLAN.md  IMPLEMENTATION_ORDERS.md  PRD.md  PYPROJECT_AUDIT_AND_PLAN.md  RDF_PURITY_MATRIX.md  README_YAWL_UI_CONVERSION.md  RUFF_IGNORES_HONEST_ANALYSIS.md  SEMANTIC_CODEGEN_ARCHITECTURE.md  SEMANTIC_CODEGEN_C4_DIAGRAMS.md  SEMANTIC_CODEGEN_SUMMARY.md  SEMANTIC_CODEGEN_TEMPLATE_CATALOG.md  YAWL_PYTHON_COMPLETE_VISION.md  YAWL_UI_CLEANUP_CHECKLIST.md  YAWL_UI_DECISION_SUMMARY.md  YAWL_UI_IMPLEMENTATION_ROADMAP.md  YAWL_UI_IMPLEMENTATION_STRATEGY.md  YAWL_UI_PYTHON_ARCHITECTURE.md  YAWL_UI_QUICK_REFERENCE.md  cli-c4-code.puml  cli-c4-component.puml  cli-c4-container.puml  cli-c4-context.puml  codegen_architecture.puml  kgcl-daemon-c4.puml  mcp-codebase-server-prd.md  unified-codegen-framework.md  yawl_sequence_diagrams.puml  yawl_ui_diagrams.md  yawl_ui_implementation_phases.puml
docs/codegen/: GENERATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LIES_DETECTED_AND_FIXED.md  QUICK_START.md  UNIFIED_CODEGEN_GUIDE.md  VALIDATION.md
docs/explanation/: index.md  (+38 more)
examples/: DELIVERABLES.md  INDEX.md  QUICKSTART.md  README.md  __init__.py  basic_test.py  codegen_demo.py  codegen_validation_demo.py  fixture_test.py  full_pipeline_demo.py  hooks_fmea_usage.py  hybrid_backward_compatibility_demo.py  lockchain_demo.py  poc_apple_ingest.py  poc_condition_evaluator.py  poc_dark_matter.py  poc_query_optimizer.py  poc_semantic_analysis.py  poc_shacl_validator.py  proof_avatar1_marketing_lead_generator.py  proof_dspy_generator.py  proof_engine_working.py  proof_exception_handling.py  proof_gap_analysis.py  proof_ontology_driven_development.py  proof_python_generator.py  proof_worklet_lifecycle.py  proof_worklet_selection.py  proof_yawl_generator.py  proof_yawl_ontology.py  proof_ydecomposition_methods.py  property_test.py  proto_apple_ingest.py  proto_condition_evaluator.py  proto_dark_matter.py  proto_query_optimizer.py  proto_semantic_analysis.py  proto_shacl_validator.py  research_pyoxigraph_basic.py  research_pyoxigraph_export.py  (+14 more)
ontology/: README.md  invariants.shacl.ttl  kgc_physics.ttl  yawl-shapes.ttl  yawl.ttl
playground/: QUICKSTART.md  README.md  advanced_workflows.py  basic_usage.py  setup_and_run.sh
scripts/: benchmark_warm_eye.py  build_codebase_index.py  bulk_add_types.py  detect_implementation_lies.py  fix_jtbd_tests.py  fix_type_errors.py  generate_all_missing_stubs.py  generate_dialogs.py  generate_dynform.py  generate_views.py  implement_missing_methods.py  split_yawl_ontology.py  test_ai_lie_patterns.sh  test_quality_gates.sh  test_quality_gates_simple.sh  verify_all_lie_detection.sh  verify_pyobjc_install.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_core.py  test_end_to_end_integration.py  test_hooks.py  test_import.py  test_ingestion.py  test_integration.py  test_kgc_lean_spec.py  test_swarm.py  test_testing.py  test_tick_controller.py  test_validation.py
vendors/: test_results.txt
(+2230 files in other folders)
