[build-system]  # https://docs.astral.sh/uv/concepts/projects/config/#build-systems
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]  # https://packaging.python.org/en/latest/specifications/pyproject-toml/
name = "kgcl"
version = "0.0.0"
description = "Knowledge Geometry Calculus for Life - Local-first autonomic knowledge engine"
readme = "README.md"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
requires-python = ">=3.12,<4.0"
dependencies = [
  "click>=8.1.7",
  "rich>=13.7.0",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-exporter-otlp>=1.20.0",
  "opentelemetry-exporter-otlp-proto-http>=1.20.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
  "opentelemetry-instrumentation-flask>=0.41b0",
  "requests>=2.31.0",
  "pydantic>=2.5.0",
  "pyyaml>=6.0.1",
  "rdflib>=7.0.0",
  "pyshacl>=0.25.0",
  "flask>=3.0.0",
  "dspy-ai>=2.4.0",
  "semver>=3.0.0",
  "jinja2>=3.1.0",
  "croniter>=2.0.0",
]

[project.optional-dependencies]
dspy = [
  "dspy-ai>=2.4.0",
]

[project.scripts]
kgc-daily-brief = "kgcl.cli.daily_brief:daily_brief"
kgc-weekly-retro = "kgcl.cli.weekly_retro:weekly_retro"
kgc-feature-list = "kgcl.cli.feature_list:feature_list"
kgc-query = "kgcl.cli.query:query"
kgc-config = "kgcl.cli.config:config"
kgc-health = "kgcl.observability.cli:cli"
kgc-dspy = "kgcl.dspy_runtime.__main__:main"
unrdf = "kgcl.unrdf_engine.cli:main"
unrdf-server = "kgcl.unrdf_engine.server:main"

[project.urls]  # https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
homepage = "https://github.com/user/kgcl"
source = "https://github.com/user/kgcl"
changelog = "https://github.com/user/kgcl/blob/main/CHANGELOG.md"
releasenotes = "https://github.com/user/kgcl/releases"
documentation = "https://user.github.io/kgcl"
issues = "https://github.com/user/kgcl/issues"

[dependency-groups]  # https://docs.astral.sh/uv/concepts/projects/dependencies/#development-dependencies
dev = [
  "commitizen (>=4.3.0)",
  "coverage[toml] (>=7.6.10)",
  "ipykernel (>=6.29.4)",
  "ipython (>=8.18.0)",
  "ipywidgets (>=8.1.2)",
  "mypy (>=1.14.1)",
  "mkdocs-material (>=9.5.21)",
  "mkdocstrings[python] (>=0.26.2)",
  "poethepoet (>=0.32.1)",
  "pre-commit (>=4.0.1)",
  "pytest (>=8.3.4)",
  "pytest-mock (>=3.14.0)",
  "pytest-watch (>=4.2.0)",
  "pytest-xdist (>=3.6.1)",
  "pytest-asyncio (>=0.23.0)",
  "ruff (>=0.9.2)",
]

[tool.commitizen]  # https://commitizen-tools.github.io/commitizen/config/
bump_message = "bump: v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "uv"

[tool.coverage.report]  # https://coverage.readthedocs.io/en/latest/config.html#report
precision = 1
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.coverage.run]  # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["src"]
parallel = true

[tool.coverage.xml]  # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.mypy]  # https://mypy.readthedocs.io/en/latest/config_file.html
# STRICTEST SETTINGS - Production Quality
junit_xml = "reports/mypy.xml"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
check_untyped_defs = true
no_implicit_optional = true
python_version = "3.12"
plugins = []

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "rdflib.*,pyshacl.*,dspy.*,croniter.*,jinja2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kgcl.hooks.conditions"
disallow_any_unimported = false

[tool.pytest.ini_options]  # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--color=yes --exitfirst --failed-first --verbosity=2 --junitxml=reports/pytest.xml --strict-markers"
testpaths = ["tests"]
xfail_strict = true
asyncio_mode = "auto"
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "security: marks tests as security tests",
  "performance: marks tests as performance tests",
  "unrdf: marks tests as UNRDF porting tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["src", ".git", "build", "dist"]

[tool.ruff]  # https://docs.astral.sh/ruff/settings/
# STRICTEST SETTINGS - All rules enabled except specific exclusions
fix = true
line-length = 100
src = ["src", "tests"]
target-version = "py312"
unsafe-fixes = false

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true
indent-style = "space"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Code style exceptions
  "CPY",      # No copyright/license warnings (auto-managed by tool)
  "FIX",      # No special handling for FIXME/TODO
  "T20",      # Allow print in some contexts (will be caught by logging rules)
  "ARG001",   # Don't require unused args
  "COM812",   # Trailing comma conflicts
  "D203",     # One blank line before class (conflicting with D211)
  "D213",     # Multi-line docstring summary on second line
  "E501",     # Line too long (handled by formatter)
  "PD008",    # Use .loc/.iloc
  "PD009",    # Use .loc/.iloc
  "PGH003",   # Type ignore comment without specific error
  "RET504",   # Unnecessary assignment before return
  "S101",     # Use of assert (allowed in tests)
  "TD003",    # Missing colon in TODO
]
unfixable = [
  "ERA001",   # Commented out code
  "F401",     # Unused imports (manual judgment needed)
  "F841",     # Unused variable (might be intentional)
  "T201",     # Print statements
  "T203",     # Print to stderr
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
split-on-trailing-comma = false
known-first-party = ["kgcl"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 7
max-returns = 6
max-statements = 50

[tool.poe.executor]  # https://github.com/nat-n/poethepoet
type = "simple"

[tool.poe.tasks]

  [tool.poe.tasks.docs]
  help = "Build or serve the documentation"
  shell = """
    if [ $serve ]
    then {
      mkdocs serve
    } else {
      mkdocs build
    } fi
    """

    [[tool.poe.tasks.docs.args]]
    help = "Serve the documentation locally with live reload"
    type = "boolean"
    name = "serve"
    options = ["--serve"]

  [tool.poe.tasks.lint]
  help = "Lint this package"
  cmd = """
    pre-commit run
      --all-files
      --color always
    """

  [tool.poe.tasks.test]
  help = "Test this package"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage run"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage report"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage xml"
